--- a/style.css
+++ b/style.css
@@ -215,3 +215,38 @@ button{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+@media screen and (min-width: 320px) and (max-width: 600px) {
+
+.container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 18rem;
+    padding-left: 2rem;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
