--- a/style.css
+++ b/style.css
@@ -222,12 +222,16 @@ button{
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 18rem;
+    margin-top: 20rem;
 }
 
 .drop {
     position: absolute;
     left: 520px;
+}
+
+#curtainimage{
+    margin-bottom: 4rem;
 }
 
 }
