--- a/style.css
+++ b/style.css
@@ -217,21 +217,31 @@ button{
 }
 
 @media screen and (min-width: 320px) and (max-width: 600px) {
-
 .container{
     width: 100%;
     display: flex;
-    flex-direction: column;
-    margin-top: 20rem;
+    flex-direction: column-reverse;
+    margin-top: 23rem;
 }
 
 .drop {
-    position: absolute;
-    left: 520px;
+    display: none;
+}
+.container2 {
+    width: 566px;
+    height: fit-content;
+}
+.container4{
+    margin-top: 3rem;
+}
+#curtainimage{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-#curtainimage{
-    margin-bottom: 4rem;
+.clock-logo{
+    position: absolute;
+    top: 0;
 }
 
 }
